--- a/new.plone.org/static/originals/developers.html
+++ b/new.plone.org/static/originals/developers.html
@@ -9,7 +9,7 @@
 		@import url("../plone.css");
 	</style>
 	<!--[if IE]>
-        <style type="text/css" media="all">@import url(ie.css);</style>
+        <style type="text/css" media="all">@import url(../ie.css);</style>
     <![endif]-->	
 	<script type="text/javascript" src="slider.js"></script>
 </head>
