--- a/new.plone.org/static/originals/frontpage.html
+++ b/new.plone.org/static/originals/frontpage.html
@@ -9,7 +9,7 @@
 		@import url("../plone.css");
 	</style>
 	<!--[if IE]>
-        <style type="text/css" media="all">@import url(ie.css);</style>
+        <style type="text/css" media="all">@import url(../ie.css);</style>
     <![endif]-->	
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
