--- a/new.plone.org/static/originals/support.html
+++ b/new.plone.org/static/originals/support.html
@@ -9,7 +9,7 @@
 		@import url("../plone.css");
 	</style>
 	<!--[if IE]>
-        <style type="text/css" media="all">@import url(ie.css);</style>
+        <style type="text/css" media="all">@import url(../ie.css);</style>
     <![endif]-->	
 </head>
 <body id="main">
