--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -140,8 +140,8 @@
 			<!-- <dd><a href="http://dev.plone.org/plone/newticket">Suggest new features    </a></dd> -->
 			<dd><a href="http://dev.plone.org/plone/timeline">Latest changes</a></dd>
 			<dd><a href="http://dev.plone.org/plone/browse">Browse source   </a></dd>
-			<dd><a href="/about/contributing">Contribute to Plone           </a></dd>
-			<dd><a href="http://planet.plone.org">Community blogs                </a></dd>
+			<dd><a href="http://dev.plone.org/plone">Contribute to Plone    </a></dd>
+			<dd><a href="http://planet.plone.org">Community blogs           </a></dd>
 		</dl>
 
 		<dl>
