--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -4,21 +4,20 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-	<title>plone.org redesign prototype</title>
+	<title>plone.org</title>
 
 	<link rel="alternate" type="application/rss+xml" href="http://plone.org/news/newslisting/RSS" title="Plone news" /> 
 	<link rel="alternate" type="application/rss+xml" href="http://plone.org/events/community/upcoming-events/RSS" title="Upcoming Plone events" /> 
 	<link rel="alternate" type="application/rss+xml" href="http://plone.org/search_rss?portal_type=PSCRelease&sort_on=Date&sort_order=reverse&review_state=alpha&review_state=beta&review_state=release-candidate&review_state=final" title="Latest Plone &amp; add-on releases" /> 
 	<link rel="alternate" type="application/rss+xml" href="http://plone.org/events/community/training/training-announcements/RSS" title="Upcoming Plone training" /> 
 
-	<style type="text/css" media="screen">
-		@import url("/plone.css");
-	</style>
+	<link rel="stylesheet" href="/plone.css" type="text/css" media="screen" />
+
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(/ie.css);</style>
     <![endif]-->	
 
-	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script> -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 
 	<script type="text/javascript">
 		$(document).ready(function(){
